Added html headers

--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE = HTML>
 <html>
-	<head>
-	
-	
-	</head>
-	
-	<body>
-	
-	</body>
 
+<head>
+    <!-- SCROLLS -->
+    <!-- load bootstrap and fontawesome via CDN -->
+    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" /> -->
+    <link rel="stylesheet" href="//bootswatch.com/darkly/bootstrap.min.css" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" />
+    <!-- SPELLS -->
+    <!-- load angular and angular route via CDN -->
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <!-- <script src="js/script.js"></script> -->
+</head>
 
-
+<body>
+	<div class="main">
+		
+	</div>
+</body>
 
 </html>
