fixed image reference

--- a/pages/index.html
+++ b/pages/index.html
@@ -79,7 +79,7 @@
                         <!-- /.panel-heading -->
                         <div class="panel-body ">
                             <div class="col-sm-12 col-md-12 col-lg-12">
-                                <img src="../images/Weather.png" class="img-responsive">
+                                <img src="../Images/Weather.png" class="img-responsive">
                             </div>
                         </div>
                         <!-- /.panel-body -->
